[gd_scene load_steps=7 format=2]

[ext_resource path="res://postjam/sprite.png" type="Texture" id=1]
[ext_resource path="res://postjam/sword.gd" type="Script" id=2]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float white_amount;

void fragment() {
	COLOR = vec4(mix(texture(TEXTURE, UV).rgb, vec3(1,1,1), white_amount), texture(TEXTURE,UV).a);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/white_amount = null

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 8 )

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[node name="sword" type="Area2D" groups=["swords"]]
position = Vector2( -16, -16 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )
swordgen_path = NodePath("../../swords")

[node name="sprite" type="Sprite" parent="."]
material = SubResource( 8 )
texture = ExtResource( 1 )
hframes = 64
vframes = 64
frame = 4

[node name="shape" type="CollisionShape2D" parent="."]
modulate = Color( 1, 1, 1, 1.19209e-07 )
shape = SubResource( 2 )

[node name="shape_circle" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="timer" type="Timer" parent="."]
one_shot = true

[node name="shader_light_tween" type="Tween" parent="."]

[node name="disappear" type="Tween" parent="."]

[connection signal="tween_completed" from="disappear" to="." method="_on_disappear_tween_completed"]
